--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "dev": "nodemon ./server.js --open"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^4.17.0",
-    "@tensorflow/tfjs-node": "^4.17.0",
+    "@tensorflow/tfjs": "^4.19.0",
+    "@tensorflow/tfjs-node": "^4.19.0",
+    "@tensorflow/tfjs-node-gpu": "^4.19.0",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
     "tensorflow-models": "^0.0.1"
